# qt-hot-reload-study

./: .gitignore  CMakeLists.txt  ObjectTest.cpp  ObjectTest.hpp  SyntaxHighlightEditor.qml  main.cpp  main.qml  qml.qrc  stdafx.hpp
cpprepl_utils/: monitorninja.txt  ninjadev.cpp
